// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyboard change onKeyDown 1`] = `
<span>
  hi
</span>
`;

exports[`Keyboard change onKeyDown 2`] = `
<span>
  hi
</span>
`;

exports[`Keyboard onDown 1`] = `
<div>
  <span>
    hi
  </span>
</div>
`;

exports[`Keyboard onKeyDown 1`] = `
<div>
  <span>
    hi
  </span>
</div>
`;
